{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 54,
  "lineage": "ccc6df87-33fa-af04-73dc-37aa1949f718",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:442042534130:security-group/sg-0c3e706f9cc310e34",
            "description": "Security group for EKS cluster AWS-EKS-Cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c3e706f9cc310e34",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow worker nodes to communicate with EKS cluster control plane",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b3c2b6d497e32649"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "AWS-EKS-Cluster-eks-cluster-sg",
            "name_prefix": "",
            "owner_id": "442042534130",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "development",
              "Name": "AWS-EKS-Cluster-eks-cluster-sg",
              "Project": "EKS Cluster on AWS",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "development",
              "ManagedBy": "Terraform",
              "Name": "AWS-EKS-Cluster-eks-cluster-sg",
              "Project": "EKS Cluster on AWS",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-00c7510433d6c5c46"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.iam.aws_iam_role.eks_cluster_role",
            "module.iam.aws_iam_role.eks_node_group_role",
            "module.iam.aws_iam_role_policy_attachment.eks_cluster_AmazonEKSClusterPolicy",
            "module.iam.aws_iam_role_policy_attachment.eks_cluster_AmazonEKSServicePolicy",
            "module.iam.aws_iam_role_policy_attachment.eks_node_group_AmazonEC2ContainerRegistryReadOnly",
            "module.iam.aws_iam_role_policy_attachment.eks_node_group_AmazonEKSWorkerNodePolicy",
            "module.iam.aws_iam_role_policy_attachment.eks_node_group_AmazonEKS_CNI_Policy",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:442042534130:security-group/sg-0b3c2b6d497e32649",
            "description": "Security group for EKS worker nodes AWS-EKS-Cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b3c2b6d497e32649",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow worker nodes to communicate with each other",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "AWS-EKS-Cluster-eks-worker-sg",
            "name_prefix": "",
            "owner_id": "442042534130",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "development",
              "Name": "AWS-EKS-Cluster-eks-worker-sg",
              "Project": "EKS Cluster on AWS",
              "Terraform": "true",
              "kubernetes.io/cluster/AWS-EKS-Cluster": "owned"
            },
            "tags_all": {
              "Environment": "development",
              "ManagedBy": "Terraform",
              "Name": "AWS-EKS-Cluster-eks-worker-sg",
              "Project": "EKS Cluster on AWS",
              "Terraform": "true",
              "kubernetes.io/cluster/AWS-EKS-Cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-00c7510433d6c5c46"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.iam.aws_iam_role.eks_cluster_role",
            "module.iam.aws_iam_role.eks_node_group_role",
            "module.iam.aws_iam_role_policy_attachment.eks_cluster_AmazonEKSClusterPolicy",
            "module.iam.aws_iam_role_policy_attachment.eks_cluster_AmazonEKSServicePolicy",
            "module.iam.aws_iam_role_policy_attachment.eks_node_group_AmazonEC2ContainerRegistryReadOnly",
            "module.iam.aws_iam_role_policy_attachment.eks_node_group_AmazonEKSWorkerNodePolicy",
            "module.iam.aws_iam_role_policy_attachment.eks_node_group_AmazonEKS_CNI_Policy",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "eks_cluster_to_worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow EKS cluster control plane to communicate with worker nodes",
            "from_port": 443,
            "id": "sgrule-3517141533",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b3c2b6d497e32649",
            "security_group_rule_id": "sgr-0a72ae96ab5286b55",
            "self": false,
            "source_security_group_id": "sg-0c3e706f9cc310e34",
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.eks_cluster",
            "module.eks.aws_security_group.eks_worker",
            "module.iam.aws_iam_role.eks_cluster_role",
            "module.iam.aws_iam_role.eks_node_group_role",
            "module.iam.aws_iam_role_policy_attachment.eks_cluster_AmazonEKSClusterPolicy",
            "module.iam.aws_iam_role_policy_attachment.eks_cluster_AmazonEKSServicePolicy",
            "module.iam.aws_iam_role_policy_attachment.eks_node_group_AmazonEC2ContainerRegistryReadOnly",
            "module.iam.aws_iam_role_policy_attachment.eks_node_group_AmazonEKSWorkerNodePolicy",
            "module.iam.aws_iam_role_policy_attachment.eks_node_group_AmazonEKS_CNI_Policy",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "eks_worker_to_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow worker nodes to communicate with EKS cluster control plane",
            "from_port": 443,
            "id": "sgrule-2577088878",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c3e706f9cc310e34",
            "security_group_rule_id": "sgr-0763f8f60f77ae2a8",
            "self": false,
            "source_security_group_id": "sg-0b3c2b6d497e32649",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.eks_cluster",
            "module.eks.aws_security_group.eks_worker",
            "module.iam.aws_iam_role.eks_cluster_role",
            "module.iam.aws_iam_role.eks_node_group_role",
            "module.iam.aws_iam_role_policy_attachment.eks_cluster_AmazonEKSClusterPolicy",
            "module.iam.aws_iam_role_policy_attachment.eks_cluster_AmazonEKSServicePolicy",
            "module.iam.aws_iam_role_policy_attachment.eks_node_group_AmazonEC2ContainerRegistryReadOnly",
            "module.iam.aws_iam_role_policy_attachment.eks_node_group_AmazonEKSWorkerNodePolicy",
            "module.iam.aws_iam_role_policy_attachment.eks_node_group_AmazonEKS_CNI_Policy",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "eks_worker_to_worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow worker nodes to communicate with each other",
            "from_port": 0,
            "id": "sgrule-3416724642",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0b3c2b6d497e32649",
            "security_group_rule_id": "sgr-03ab893e9d99ccd09",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.eks_worker",
            "module.iam.aws_iam_role.eks_cluster_role",
            "module.iam.aws_iam_role.eks_node_group_role",
            "module.iam.aws_iam_role_policy_attachment.eks_cluster_AmazonEKSClusterPolicy",
            "module.iam.aws_iam_role_policy_attachment.eks_cluster_AmazonEKSServicePolicy",
            "module.iam.aws_iam_role_policy_attachment.eks_node_group_AmazonEC2ContainerRegistryReadOnly",
            "module.iam.aws_iam_role_policy_attachment.eks_node_group_AmazonEKSWorkerNodePolicy",
            "module.iam.aws_iam_role_policy_attachment.eks_node_group_AmazonEKS_CNI_Policy",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-086bf4c082a214c57",
            "arn": "arn:aws:ec2:us-east-1:442042534130:elastic-ip/eipalloc-086bf4c082a214c57",
            "association_id": "eipassoc-02b4b37062a676b08",
            "domain": "vpc",
            "id": "eipalloc-086bf4c082a214c57",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0a9c8b4e09e6c06ad",
            "private_dns": "ip-10-0-101-242.ec2.internal",
            "private_ip": "10.0.101.242",
            "public_dns": "ec2-3-209-112-87.compute-1.amazonaws.com",
            "public_ip": "3.209.112.87",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "development",
              "Name": "AWS-EKS-Cluster-nat-eip-1",
              "Project": "EKS Cluster on AWS",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "development",
              "ManagedBy": "Terraform",
              "Name": "AWS-EKS-Cluster-nat-eip-1",
              "Project": "EKS Cluster on AWS",
              "Terraform": "true"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:442042534130:internet-gateway/igw-06f8591ec39a8027a",
            "id": "igw-06f8591ec39a8027a",
            "owner_id": "442042534130",
            "tags": {
              "Environment": "development",
              "Name": "AWS-EKS-Cluster-igw",
              "Project": "EKS Cluster on AWS",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "development",
              "ManagedBy": "Terraform",
              "Name": "AWS-EKS-Cluster-igw",
              "Project": "EKS Cluster on AWS",
              "Terraform": "true"
            },
            "vpc_id": "vpc-00c7510433d6c5c46"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-086bf4c082a214c57",
            "association_id": "eipassoc-02b4b37062a676b08",
            "connectivity_type": "public",
            "id": "nat-037d1d379e42bab49",
            "network_interface_id": "eni-0a9c8b4e09e6c06ad",
            "private_ip": "10.0.101.242",
            "public_ip": "3.209.112.87",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-07e99ab84a89c06cc",
            "tags": {
              "Environment": "development",
              "Name": "AWS-EKS-Cluster-nat-gateway-1",
              "Project": "EKS Cluster on AWS",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "development",
              "ManagedBy": "Terraform",
              "Name": "AWS-EKS-Cluster-nat-gateway-1",
              "Project": "EKS Cluster on AWS",
              "Terraform": "true"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:442042534130:route-table/rtb-00d326556ff54809f",
            "id": "rtb-00d326556ff54809f",
            "owner_id": "442042534130",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-037d1d379e42bab49",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "development",
              "Name": "AWS-EKS-Cluster-private-rt-1",
              "Project": "EKS Cluster on AWS",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "development",
              "ManagedBy": "Terraform",
              "Name": "AWS-EKS-Cluster-private-rt-1",
              "Project": "EKS Cluster on AWS",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-00c7510433d6c5c46"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:442042534130:route-table/rtb-04cafd5ab85c11487",
            "id": "rtb-04cafd5ab85c11487",
            "owner_id": "442042534130",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-037d1d379e42bab49",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "development",
              "Name": "AWS-EKS-Cluster-private-rt-2",
              "Project": "EKS Cluster on AWS",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "development",
              "ManagedBy": "Terraform",
              "Name": "AWS-EKS-Cluster-private-rt-2",
              "Project": "EKS Cluster on AWS",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-00c7510433d6c5c46"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:442042534130:route-table/rtb-0125954e64f4133ca",
            "id": "rtb-0125954e64f4133ca",
            "owner_id": "442042534130",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-037d1d379e42bab49",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "development",
              "Name": "AWS-EKS-Cluster-private-rt-3",
              "Project": "EKS Cluster on AWS",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "development",
              "ManagedBy": "Terraform",
              "Name": "AWS-EKS-Cluster-private-rt-3",
              "Project": "EKS Cluster on AWS",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-00c7510433d6c5c46"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:442042534130:route-table/rtb-0b09b3f943914dcd4",
            "id": "rtb-0b09b3f943914dcd4",
            "owner_id": "442042534130",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06f8591ec39a8027a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "development",
              "Name": "AWS-EKS-Cluster-public-rt",
              "Project": "EKS Cluster on AWS",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "development",
              "ManagedBy": "Terraform",
              "Name": "AWS-EKS-Cluster-public-rt",
              "Project": "EKS Cluster on AWS",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-00c7510433d6c5c46"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0533a2209dbce0583",
            "route_table_id": "rtb-00d326556ff54809f",
            "subnet_id": "subnet-014e875332d1c7f1e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00a6bbea40ea2eb97",
            "route_table_id": "rtb-04cafd5ab85c11487",
            "subnet_id": "subnet-0db150f491b13b650"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dc12cef2a0667683",
            "route_table_id": "rtb-0125954e64f4133ca",
            "subnet_id": "subnet-0355e85cc495dd08e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a7fc2de5c24f9ee0",
            "route_table_id": "rtb-0b09b3f943914dcd4",
            "subnet_id": "subnet-07e99ab84a89c06cc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-043d3b7d79db8557f",
            "route_table_id": "rtb-0b09b3f943914dcd4",
            "subnet_id": "subnet-028ea1c560c303a0b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09394e26839fbb3ba",
            "route_table_id": "rtb-0b09b3f943914dcd4",
            "subnet_id": "subnet-08e85576b0acf5371"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:442042534130:subnet/subnet-014e875332d1c7f1e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-014e875332d1c7f1e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "442042534130",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "development",
              "Name": "AWS-EKS-Cluster-private-subnet-us-east-1a",
              "Project": "EKS Cluster on AWS",
              "Terraform": "true",
              "kubernetes.io/cluster/AWS-EKS-Cluster": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "type": "private"
            },
            "tags_all": {
              "Environment": "development",
              "ManagedBy": "Terraform",
              "Name": "AWS-EKS-Cluster-private-subnet-us-east-1a",
              "Project": "EKS Cluster on AWS",
              "Terraform": "true",
              "kubernetes.io/cluster/AWS-EKS-Cluster": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "type": "private"
            },
            "vpc_id": "vpc-00c7510433d6c5c46"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:442042534130:subnet/subnet-0db150f491b13b650",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0db150f491b13b650",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "442042534130",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "development",
              "Name": "AWS-EKS-Cluster-private-subnet-us-east-1b",
              "Project": "EKS Cluster on AWS",
              "Terraform": "true",
              "kubernetes.io/cluster/AWS-EKS-Cluster": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "type": "private"
            },
            "tags_all": {
              "Environment": "development",
              "ManagedBy": "Terraform",
              "Name": "AWS-EKS-Cluster-private-subnet-us-east-1b",
              "Project": "EKS Cluster on AWS",
              "Terraform": "true",
              "kubernetes.io/cluster/AWS-EKS-Cluster": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "type": "private"
            },
            "vpc_id": "vpc-00c7510433d6c5c46"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:442042534130:subnet/subnet-0355e85cc495dd08e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0355e85cc495dd08e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "442042534130",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "development",
              "Name": "AWS-EKS-Cluster-private-subnet-us-east-1c",
              "Project": "EKS Cluster on AWS",
              "Terraform": "true",
              "kubernetes.io/cluster/AWS-EKS-Cluster": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "type": "private"
            },
            "tags_all": {
              "Environment": "development",
              "ManagedBy": "Terraform",
              "Name": "AWS-EKS-Cluster-private-subnet-us-east-1c",
              "Project": "EKS Cluster on AWS",
              "Terraform": "true",
              "kubernetes.io/cluster/AWS-EKS-Cluster": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "type": "private"
            },
            "vpc_id": "vpc-00c7510433d6c5c46"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:442042534130:subnet/subnet-07e99ab84a89c06cc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07e99ab84a89c06cc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "442042534130",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "development",
              "Name": "AWS-EKS-Cluster-public-subnet-us-east-1a",
              "Project": "EKS Cluster on AWS",
              "Terraform": "true",
              "kubernetes.io/cluster/AWS-EKS-Cluster": "shared",
              "kubernetes.io/role/elb": "1",
              "type": "public"
            },
            "tags_all": {
              "Environment": "development",
              "ManagedBy": "Terraform",
              "Name": "AWS-EKS-Cluster-public-subnet-us-east-1a",
              "Project": "EKS Cluster on AWS",
              "Terraform": "true",
              "kubernetes.io/cluster/AWS-EKS-Cluster": "shared",
              "kubernetes.io/role/elb": "1",
              "type": "public"
            },
            "vpc_id": "vpc-00c7510433d6c5c46"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:442042534130:subnet/subnet-028ea1c560c303a0b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-028ea1c560c303a0b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "442042534130",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "development",
              "Name": "AWS-EKS-Cluster-public-subnet-us-east-1b",
              "Project": "EKS Cluster on AWS",
              "Terraform": "true",
              "kubernetes.io/cluster/AWS-EKS-Cluster": "shared",
              "kubernetes.io/role/elb": "1",
              "type": "public"
            },
            "tags_all": {
              "Environment": "development",
              "ManagedBy": "Terraform",
              "Name": "AWS-EKS-Cluster-public-subnet-us-east-1b",
              "Project": "EKS Cluster on AWS",
              "Terraform": "true",
              "kubernetes.io/cluster/AWS-EKS-Cluster": "shared",
              "kubernetes.io/role/elb": "1",
              "type": "public"
            },
            "vpc_id": "vpc-00c7510433d6c5c46"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:442042534130:subnet/subnet-08e85576b0acf5371",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08e85576b0acf5371",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "442042534130",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "development",
              "Name": "AWS-EKS-Cluster-public-subnet-us-east-1c",
              "Project": "EKS Cluster on AWS",
              "Terraform": "true",
              "kubernetes.io/cluster/AWS-EKS-Cluster": "shared",
              "kubernetes.io/role/elb": "1",
              "type": "public"
            },
            "tags_all": {
              "Environment": "development",
              "ManagedBy": "Terraform",
              "Name": "AWS-EKS-Cluster-public-subnet-us-east-1c",
              "Project": "EKS Cluster on AWS",
              "Terraform": "true",
              "kubernetes.io/cluster/AWS-EKS-Cluster": "shared",
              "kubernetes.io/role/elb": "1",
              "type": "public"
            },
            "vpc_id": "vpc-00c7510433d6c5c46"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:442042534130:vpc/vpc-00c7510433d6c5c46",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-096c06991a5a3f60b",
            "default_route_table_id": "rtb-0621b074cc3cb4f5a",
            "default_security_group_id": "sg-0209006f91c77eb11",
            "dhcp_options_id": "dopt-0d2f4ed32c7ef8a79",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00c7510433d6c5c46",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0621b074cc3cb4f5a",
            "owner_id": "442042534130",
            "tags": {
              "Environment": "development",
              "Name": "AWS-EKS-Cluster-vpc",
              "Project": "EKS Cluster on AWS",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "development",
              "ManagedBy": "Terraform",
              "Name": "AWS-EKS-Cluster-vpc",
              "Project": "EKS Cluster on AWS",
              "Terraform": "true"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}